--- a/.env
+++ b/.env
@@ -24,6 +24,6 @@ APP_SECRET=a49f74a344547bcdfe5f35bf01635d75
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://a0739858_fordim_speaking_clubs:pY00nhns@141.8.192.169:3306/a0739858_fordim_speaking_clubs?serverVersion=8&charset=utf8mb4"
+ DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
