--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=a49f74a344547bcdfe5f35bf01635d75
  DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
