--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "friendsofsymfony/rest-bundle": "^3.4",
+        "nelmio/cors-bundle": "^2.2",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
@@ -20,8 +22,7 @@
         "symfony/runtime": "5.4.*",
         "symfony/serializer": "^5.4",
         "symfony/validator": "^5.4",
-        "symfony/yaml": "5.4.*",
-        "ext-json": "*"
+        "symfony/yaml": "5.4.*"
     },
     "config": {
         "allow-plugins": {
@@ -66,6 +67,7 @@
         "symfony/symfony": "*"
     },
     "extra": {
+        "public-dir": "public_html",
         "symfony": {
             "allow-contrib": false,
             "require": "5.4.*"
